2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* info.wrl:
	* index.wrl:
	* hamburger.wrl:
	* labyrinth.wrl:
	* 4vong.wrl:
	* bicman.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index__5.wrl:
	* index__6.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* floor3.wrl:
	* index.wrl:
	* indexT.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl.gz:
	* astrnmy.wrl:
	* nistlogo.wrl:
	* index.wrl:
	* bic_aussen.wrl:
	* bic-wegweiser.wrl:
	* bic-wegweiser.T.wrl:
	* bic-musterbuero.wrl:
	* bic-wegweiser.wrl.gz: 

2013-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* info.wrl:
	* buero.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* building.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.x3dv:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* bic-musterbuero.wrl: 

2013-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* IMPORT.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Rotor.wrl:
	* OutlineEditor.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* OutlineEditor.wrl:
	* movie.avi:
	* ComposedCubeMapTexture.wrl:
	* ComposedCubeMapMovieTexture.wrl: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 
