@@ -1,5 +1,9 @@
 2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowserEditor.cpp: 
+
+2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DBrowserEditor.h:
 	* X3DBrowserEditor.cpp:
 	* X3DBrowserWindowInterface.h:
