@@ -1,5 +1,10 @@
 2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Generator.h:
+	* Generator.cpp: 
+
+2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Makefile.am:
 	* X3D.h:
 	* libtitania-x3d.cproj:
