@@ -6,6 +6,10 @@
 
 	* OutlineEditor.wrl: 
 
+2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineEditor.wrl: 
+
 2013-10-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
